# game-of-life

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: cmake-multi-platform.yml
src/: game.cpp  main.cpp  utilities.cpp
src/include/: components.hpp  game.hpp  utilities.hpp
